respuestas de todos los puntos del problema 1

--- a/Actividad 2 Métodos y Simulación Estadística.Rmd
+++ b/Actividad 2 Métodos y Simulación Estadística.Rmd
@@ -50,7 +50,7 @@ La probabilidad empírica es una estimación del valor real, obtenida a través 
 `r frecuencias_relativas`
 
 - ### Construye un gráfico de dispersión:
-```{r mostrar-boxplots, echo=FALSE, fig.width=12, fig.height=10, warning = FALSE}
+```{r grafico_1, echo=FALSE, fig.width=12, fig.height=10, warning = FALSE}
 plot(datos_grafico$Simulacion, datos_grafico$Frecuencia,
      main = "Frecuencias relativas de X=3 en 100 simulaciones",
      xlab = "Número de Simulación",
@@ -58,9 +58,8 @@ plot(datos_grafico$Simulacion, datos_grafico$Frecuencia,
      pch = 19,
      col = "blue")
 
-# Añadir la línea de probabilidad teórica
-probabilidad_teorica <- dpois(3, lambda = 5)
-abline(h = probabilidad_teorica, col = "red", lty = 2, lwd = 2)
+
+abline(h = xes3, col = "red", lty = 2, lwd = 2)
 
 # Añadir la leyenda en una posición que no estorbe
 legend("bottomright",
@@ -68,4 +67,144 @@ legend("bottomright",
        col = c("blue", "red"), pch = c(19, NA), lty = c(NA, 2), lwd = c(NA, 2),
        bg = "white",
        box.lwd = 0.5)
+```
+
+## d Impacto del tamaño muestral:
+
+- ### Genera muestras aleatorias con tamaños: 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900 y 1,000. Agrega valores si consideras que mejora el análisis de los resultados.
+
+
+- ### Calcula la frecuencia relativa de X=3 para cada tamaño.
+```{r calcular_frecuencias_relativas, echo=FALSE, warning = FALSE}
+#Genera muestras aleatorias con tamaños:
+# Definir los tamaños muestrales
+sample_sizes <- c(5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400,500, 600, 700, 800, 900, 1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000)
+
+# Vector para almacenar las frecuencias relativas
+rel_freqs <- numeric(length(sample_sizes))
+# Generar muestras y calcular frecuencias relativas
+for (i in 1:length(sample_sizes)) {
+  n <- sample_sizes[i]
+  samples <- rpois(n, lambda = 5)
+  rel_freq <- sum(samples == 3) / n
+  rel_freqs[i] <- rel_freq
+  cat("Tamaño muestral", n, ": Frecuencia relativa =", rel_freq, "\n")
+}
+
+```
+- ### Construye un gráfico de dispersión:
+
+- Eje X: Indexación (1 al 20) por cada tamaño muestral.
+
+- Eje Y: Frecuencias relativas fn(X=3).
+
+- Dibuja la línea en P(X=3)  y describe si aparece una tendencia.
+
+```{r grafico_2, echo=FALSE, fig.width=12, fig.height=10, warning = FALSE}
+# Construir el gráfico de dispersión
+
+plot(1:length(sample_sizes), rel_freqs, 
+     xlab = "Indexación (1 al 20) por tamaño muestral",
+     ylab = "Frecuencias relativas fn(X=3)",
+     main = "Impacto del tamaño muestral en la frecuencia relativa de X=3",
+     pch = 19, col = "blue")
+
+# Dibujar la línea horizontal en P(X=3)
+abline(h = xes3, col = "red", lty = 2)
+legend("topright", legend = c("Frecuencias relativas", "P(X=3)"),
+       col = c("blue", "red"), pch = c(19, NA), lty = c(NA, 2))
+```
+## c.Convergencia de la media muestral:
+- Genera 100 muestras de tamaño n=1,000.
+```{r generar_100_muestras, echo=FALSE, warning = FALSE}
+
+# Definir parámetros
+lambda <- 5  # Media teórica de la distribución de Poisson
+n <- 1000    # Tamaño de cada muestra
+num_samples <- 100  # Número de muestras
+
+# Generar 100 muestras de tamaño n=1000 y calcular promedios muestrales
+sample_means <- numeric(num_samples)
+for (i in 1:num_samples) {
+  sample <- rpois(n, lambda = lambda)
+  sample_means[i] <- mean(sample)
+}
+```
+- Calcula el promedio muestral de solicitudes en cada muestra.
+```{r calcular_promedio_muestral, echo=FALSE, warning = FALSE}
+
+# Mostrar la media teórica
+cat("Media teórica λ =", lambda, "\n\n")
+
+# Imprimir los promedios muestrales
+for (i in 1:num_samples) {
+  cat("Muestra", i, ": Promedio muestral =", sample_means[i], "\n")
+}
+```
+### Construye un gráfico de dispersión:
+
+- Eje X: Indexación por cada muestra (1 a 100).
+
+- Eje Y: Promedios muestrales.
+
+- Traza la línea horizontal en la media teórica (λ
+) y analiza la tendencia.
+
+```{r grafico_3, echo=FALSE, fig.width=12, fig.height=10, warning = FALSE}
+# Construir el gráfico de dispersión
+plot(1:num_samples, sample_means,
+     xlab = "Indexación (Muestra 1 a 100)",
+     ylab = "Promedios muestrales",
+     main = "Convergencia de la media muestral (n=1000, λ=5)",
+     pch = 19, col = "blue")
+
+# Trazar la línea horizontal en la media teórica
+abline(h = lambda, col = "red", lty = 2)
+legend("topright", legend = c("Promedios muestrales", "Media teórica λ=5"),
+       col = c("blue", "red"), pch = c(19, NA), lty = c(NA, 2))
+
+```
+
+## f Impacto del tamaño muestral en la media:
+
+- Genera muestras aleatorias con tamaños: 5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900 y 1,000. Agrega valores si consideras que mejora el análisis de los resultados.
+```{r generar_muestras_lambda_5, echo=FALSE, warning = FALSE}
+sample_sizes_lambda5_5 <- c(5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300,400, 500, 600, 700, 800, 900, 1000, 2000, 3000, 4000, 5000, 6000, 7000, 8000, 9000, 10000)
+
+# Vector para almacenar los promedios muestrales
+sample_means <- numeric(length(sample_sizes_lambda5_5))
+```
+- Calcula el promedio muestral para cada tamaño.
+```{r calcular_promedio_muestral_lambda_5, echo=FALSE, warning = FALSE}
+
+# Generar muestras y calcular promedios muestrales
+for (i in 1:length(sample_sizes_lambda5_5)) {
+  n <- sample_sizes_lambda5_5[i]
+  sample <- rpois(n, lambda = lambda)
+  sample_means[i] <- mean(sample)
+  cat("Tamaño muestral", n, ": Promedio muestral =", sample_means[i], "\n")
+}
+
+# Mostrar la media teórica
+cat("\nMedia teórica λ =", lambda, "\n\n")
+```
+### Construye un gráfico de dispersión:
+
+- Eje X: Indexación (1 al 20) por cada tamaño muestral.
+
+- Eje Y: Promedios muestrales.
+
+- Dibuja la línea horizontal en la media teórica (λ) y compara si el promedio se aproxima a medida que crece el tamaño.
+```{r grafico_4, echo=FALSE, fig.width=12, fig.height=10, warning = FALSE}
+# Construir el gráfico de dispersión
+plot(1:length(sample_sizes), sample_means,
+     xlab = "Indexación (1 al 20) por tamaño muestral",
+     ylab = "Promedios muestrales",
+     main = "Impacto del tamaño muestral en la media muestral (λ=5)",
+     pch = 19, col = "blue")
+
+# Trazar la línea horizontal en la media teórica
+abline(h = lambda, col = "red", lty = 2)
+legend("topright", legend = c("Promedios muestrales", "Media teórica λ=5"),
+       col = c("blue", "red"), pch = c(19, NA), lty = c(NA, 2))
 ```
