--- a/Problema_4.Rmd
+++ b/Problema_4.Rmd
@@ -17,15 +17,82 @@ muestra <- c(6.12, 5.87, 5.45, 6.33, 5.71, 6.04, 5.92, 5.65, 6.18,
              5.78, 5.95, 6.21, 5.63, 5.79, 6.11, 5.88, 6.02, 5.76, 5.85, 6.10)
 El objetivo es determinar intervalos de confianza al 95% para la eficiencia media.
 
-Realiza las siguientes actividades:
+```{r}
+
+# Datos
+muestra <- c(6.12, 5.87, 5.45, 6.33, 5.71, 6.04, 5.92, 5.65, 6.18, 
+             5.78, 5.95, 6.21, 5.63, 5.79, 6.11, 5.88, 6.02, 5.76, 5.85, 6.10)
+
+n <- length(muestra)
+media <- mean(muestra)
+sd_muestra <- sd(muestra)
+
+
+```
+
 
 Normalidad:
+
+```{r}
+
+library(ggplot2)
+
+df <- data.frame(muestra=muestra)
+
+ggplot(df, aes(x=muestra)) +
+  geom_histogram(aes(y=..density..), bins=8, fill="skyblue", color="black") +
+  geom_density(color="red", size=1) +
+  labs(title="Histograma y densidad de la muestra",
+       x="Eficiencia (kWh/L)", y="Densidad") +
+  theme_bw(base_size=12)
+
+
+```
+
 
 Elabora un histograma y una curva de densidad de la muestra. ¿Podría considerarse normal la población de origen de la muestra?
 
 Aplica pruebas para evaluar la normalidad. Expón claramente las hipótesis nula y alternativa. Determina el nivel de significancia adecuado. Argumenta el valor del nivel de significancia que uses.
 
 Comenta si los resultados sugieren la viabilidad de usar métodos paramétricos para calcular intervalos de confianza.
+
+```{r}
+
+
+shapiro.test(muestra)      # Shapiro–Wilk
+
+          # Anderson–Darling
+
+```
+
+```{r}
+error_est <- qt(0.975, df=n-1) * sd_muestra/sqrt(n)
+IC_t <- c(media - error_est, media + error_est)
+IC_t
+
+
+```
+
+```{r}
+set.seed(123)
+B <- 2000
+boot_means <- replicate(B, mean(sample(muestra, replace=TRUE)))
+IC_boot_percentil <- quantile(boot_means, c(0.025, 0.975))
+
+```
+
+```{r}
+library(boot)
+
+# función para media
+media_fn <- function(data, i) mean(data[i])
+
+boot_obj <- boot(data=muestra, statistic=media_fn, R=2000)
+
+# IC BCa
+IC_boot_BCa <- boot.ci(boot_obj, type=c("bca"))
+
+```
 
 Método paramétrico:
 
